# cppstrongm

./: .gitignore  CMakeLists.txt  IMethods.h  IRepository.h  LessonSeven.pb.cc  LessonSeven.pb.h  LessonSeven.proto  Person.h  PhoneBook.h  PhoneBook_Test.h  PhoneNumber.h  README.md  StudentGroup.cpp  StudentGroup.h  Timer.h  War and peace.txt  main.cpp  test.txt
